# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/test.gni")

module_output_path = "intelligent_voice_framework/intelligent_voice_framework"

ohos_fuzztest("IntellVoiceManagerFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "../intellvoicemanager_fuzzer"

  include_dirs = [
    "../../../services/intell_voice_engine",
    "../../../interfaces/inner_api/native",
    "../../../services/intell_voice_engine/server/base",
    "../../../services/intell_voice_engine/proxy",
    "../../../utils",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [
    "enroll_engine_test.cpp",
    "intell_voice_manager_fuzzer.cpp",
    "intell_voice_manager_test.cpp",
    "wakeup_engine_test.cpp",
  ]

  deps = [
    "../../../frameworks/native:intellvoice_native",
    "../../../utils:intell_voice_utils",
  ]

  external_deps = [
    "c_utils:utils",
    "drivers_interface_intelligent_voice:intell_voice_engine_idl_headers",
    "hilog:libhilog",
    "ipc:ipc_core",
  ]
}
