# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

module_output_path = "ai_intelligent_voice_framework/intell_voice"

ohos_unittest("client_unit_test") {
  testonly = true
  module_out_path = module_output_path
  sources = [
    "src/client_unit_test.cpp",
    "src/engine_event_callback.cpp",
    "src/wait_for_result.cpp",
  ]

  include_dirs = [
    "include",
    "//foundation/ai/intelligent_voice_framework/services/intell_voice_engine",
    "//foundation/ai/intelligent_voice_framework/services/intell_voice_engine/server/base",
    "//foundation/ai/intelligent_voice_framework/services/intell_voice_engine/proxy",
    "//foundation/ai/intelligent_voice_framework/utils",
  ]

  cflags_cc = [
    "-Wno-error=unused-parameter",
    "-DHILOG_ENABLE",
    "-DENABLE_DEBUG",
  ]

  deps = [
    "//foundation/ai/intelligent_voice_framework/services:intell_voice_proxy",
  ]

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
}

ohos_unittest("trigger_unit_test") {
  testonly = true
  module_out_path = module_output_path
  sources = [ "src/trigger_unit_test.cpp" ]

  include_dirs = [
    "//foundation/ai/intelligent_voice_framework/services/intell_voice_trigger/server",
    "//foundation/ai/intelligent_voice_framework/services/intell_voice_trigger/server/connector_mgr",
    "//foundation/ai/intelligent_voice_framework/utils",
  ]

  cflags_cc = [
    "-Wno-error=unused-parameter",
    "-DHILOG_ENABLE",
    "-DENABLE_DEBUG",
  ]

  deps = [
    "//foundation/ai/intelligent_voice_framework/services:intell_voice_server",
  ]

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "relational_store:native_rdb",
  ]
}

ohos_unittest("trigger_manager_test") {
  testonly = true
  module_out_path = module_output_path
  sources = [ "src/trigger_manager_test.cpp" ]

  include_dirs = [
    "//foundation/ai/intelligent_voice_framework/services/intell_voice_trigger/server",
    "//foundation/ai/intelligent_voice_framework/services/intell_voice_trigger/server/connector_mgr",
    "//foundation/ai/intelligent_voice_framework/utils",
  ]

  cflags_cc = [
    "-Wno-error=unused-parameter",
    "-DHILOG_ENABLE",
    "-DENABLE_DEBUG",
  ]

  deps = [
    "//foundation/ai/intelligent_voice_framework/services:intell_voice_server",
  ]

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "relational_store:native_rdb",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
}
