# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

module_output_path = "ai_intelligent_voice_framework/multiple_audio_capturer"

ohos_unittest("multiple_capturer_test") {
  module_out_path = module_output_path
  include_dirs = [
    "./include",
    "../../../interfaces/inner_api/native",
    "../../../utils",
    "../../../services/intell_voice_engine",
    "../../../services/intell_voice_engine/server/base",
    "../../../services/intell_voice_engine/server/hdi_adapter",
    "../../../services/intell_voice_engine/server/sa",
    "../../../services/intell_voice_engine/server/utils",
    "../../../services/intell_voice_engine/server/wakeup",
    "../../../services/intell_voice_engine/server/wakeup/headset",
  ]

  cflags_cc = [
    "-Wno-error=unused-parameter",
    "-DHILOG_ENABLE",
    "-DENABLE_DEBUG",
  ]

  sources = [ "src/multiple_capturer_test.cpp" ]

  deps = [ "../../../services:intell_voice_server" ]

  external_deps = [
    "audio_framework:audio_capturer",
    "audio_framework:audio_client",
    "c_utils:utils",
    "drivers_interface_intelligent_voice:intell_voice_trigger_idl_headers",
    "drivers_interface_intelligent_voice:libintell_voice_engine_proxy_1.0",
    "drivers_interface_intelligent_voice:libintell_voice_trigger_proxy_1.0",
    "hilog:libhilog",
  ]
}
