# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/test.gni")

module_output_path = "ai_intelligent_voice_framework/intell_voice"

ohos_unittest("intell_voice_manager_test") {
  testonly = true
  module_out_path = module_output_path
  include_dirs = [ "../../../../utils" ]

  use_exceptions = true

  cflags = [
    "-Wall",
    "-Werror",
    "-Wno-macro-redefined",
  ]

  cflags_cc = [
    "-Wno-error=unused-parameter",
    "-DHILOG_ENABLE",
    "-DENABLE_DEBUG",
    "-DSUPPORT_TELEPHONY_SERVICE",
    "-fno-access-control",
  ]

  deps = [
    "../../../../services:intell_voice_server",
    "../../../../utils:intell_voice_utils",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_manager",
    "ability_runtime:app_context",
    "ability_runtime:dataobs_manager",
    "access_token:libaccesstoken_sdk",
    "c_utils:utils",
    "ffrt:libffrt",
    "hilog:libhilog",
    "huks:libhukssdk",
    "jsoncpp:jsoncpp",
    "safwk:system_ability_fwk",
  ]

  sources = [
    "src/intell_voice_manager_test.cpp",
    "src/intell_voice_manager_unit_test.cpp",
  ]
}
