# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/test.gni")

module_output_path = "ai_intelligent_voice_framework/intell_voice"

ohos_unittest("intelligent_voice_trigger_unit_test") {
  testonly = true
  module_out_path = module_output_path
  include_dirs = [
    "../../server",
    "../../server/connector_mgr",
    "../../../../utils",
  ]

  use_exceptions = true

  cflags = [
    "-Wall",
    "-Werror",
    "-Wno-macro-redefined",
  ]

  cflags_cc = [
    "-Wno-error=unused-parameter",
    "-DHILOG_ENABLE",
    "-DENABLE_DEBUG",
    "-fno-access-control",
  ]

  deps = [ "../../../../services:intell_voice_server" ]

  external_deps = [
    "audio_framework:audio_client",
    "c_utils:utils",
    "call_manager:tel_call_manager_api",
    "core_service:tel_core_service_api",
    "drivers_interface_intelligent_voice:intell_voice_trigger_idl_headers",
    "hilog:libhilog",
    "power_manager:powermgr_client",
    "relational_store:native_rdb",
    "state_registry:tel_state_registry_api",
  ]

  sources = [ "src/trigger_detector_unit_test.cpp" ]
}
